@@ -3,6 +3,17 @@ $Id$
 $URL$
 ===============================================================================
 New Checkin: mlevy
+Date:        12 Nov 2012
+Summary:     Added vmix_shear.F90, I think the structure is there for PP mixing
+             (will test in POP, but that requires more POP infrastructure
+             changes). New tag coming after POP work is complete.
+
+Files Modified:
+A       src/shared/vmix_shear.F90
+M       src/shared/vmix_kinds_and_types.F90
+
+===============================================================================
+New Checkin: mlevy
 Date:        5 Nov 2012
 Summary:     Updated makefile to error out if VMIX_DRIVER is not found.
 
